@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group = 'org.example'
@@ -9,11 +10,18 @@ repositories {
     mavenCentral()
 }
 
+application {
+    applicationDefaultJvmArgs = [
+            "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+    ]
+}
+
 dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
+    implementation 'cglib:cglib:3.3.0'
 
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
